--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -35,7 +35,7 @@
   </div>
 <% end %>
 
-<div class="w-full max-w-4xl mx-auto p-4 bg-white shadow-md rounded-lg dark:bg-black">
+<div class="w-full max-w-4xl mx-auto p-4 bg-white shadow rounded-lg dark:bg-black">
   <div class="relative">
     <canvas id="sprintChart"></canvas>
   </div>
