--- a/views/_issue.erb
+++ b/views/_issue.erb
@@ -17,7 +17,7 @@
         <% end %>
         <p class="text-sm truncate font-semibold leading-6 text-gray-900 dark:text-gray-300"><a href="<%= issue.url %>" target="_blank" class="hover:underline"><%= issue.title %></a></p>
         <% if issue.unplanned?(sprint) %>
-          <p class="mt-0.5 whitespace-nowrap rounded-md bg-yellow-50 px-1.5 py-0.5 text-xs font-medium text-yellow-700 ring-1 ring-inset ring-yellow-600/20">Unplanned</p>
+          <p class="mt-0.5 whitespace-nowrap rounded-md bg-yellow-50 px-1.5 py-0.5 text-xs font-medium text-yellow-700 ring-1 ring-inset ring-yellow-600/20 dark:bg-yellow-950 dark:text-yellow-200 dark:ring-yellow-400/20">Unplanned</p>
         <% end %>
       </div>
       <div class="mt-1 flex flex-col sm:flex-row items-start sm:items-center gap-x-2 gap-y-1 sm:gap-y-0 text-xs leading-5 text-gray-500">
