--- a/views/project.erb
+++ b/views/project.erb
@@ -8,8 +8,8 @@
     </div>
     <div class="hidden sm:block">
       <nav class="-mb-px flex space-x-8" aria-label="Tabs">
-        <a href="/projects/<%= @project.id %>?status=" class="whitespace-nowrap <%= params[:status].blank? ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status].blank? %>>Active</a>
-        <a href="/projects/<%= @project.id %>?status=completed" class="whitespace-nowrap <%= params[:status] == 'completed' ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status] == 'completed' %>>Completed</a>
+        <a href="/projects/<%= @project.id %>?status=" class="whitespace-nowrap <%= params[:status].blank? ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status].blank? %>>Active</a>
+        <a href="/projects/<%= @project.id %>?status=completed" class="whitespace-nowrap <%= params[:status] == 'completed' ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status] == 'completed' %>>Completed</a>
       </nav>
     </div>
   </div>
@@ -32,7 +32,7 @@
               <p class="mt-0.5 whitespace-nowrap rounded-md bg-green-50 ml-2 px-1.5 py-0.5 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20 dark:bg-green-900 dark:text-green-100 dark:ring-green-700">Complete</p>
             <% end %>
           </div>
-          <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500">
+          <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500 dark:text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z" />
             </svg>
