--- a/views/new_project.erb
+++ b/views/new_project.erb
@@ -14,6 +14,22 @@
           <input required type="text" name="url" id="url" pattern="^(https?:\/\/)?(www\.)?github\.com\/orgs\/[^\/]+\/projects\/\d+$" autofocus="autofocus" autocomplete="url" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6 dark:bg-gray-800 dark:text-gray-200 dark:placeholder:text-gray-600" placeholder="https://github.com/dep...">
         </div>
       </div>
+
+      <div class="rounded-md bg-yellow-50 p-4 mt-9">
+        <div class="flex">
+          <div class="flex-shrink-0">
+            <svg class="h-5 w-5 text-yellow-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+            </svg>
+          </div>
+          <div class="ml-3">
+            <h3 class="text-sm font-medium text-yellow-800">Initial Import Notice</h3>
+            <div class="mt-2 text-sm text-yellow-700">
+              <p>Existing Sprints will not show when an Issue was added to the Sprint. Sprints created after initial import are unaffected.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
