--- a/views/new_project.erb
+++ b/views/new_project.erb
@@ -11,7 +11,7 @@
       <label for="url" class="block text-sm font-medium leading-6 text-gray-900 dark:text-gray-200">URL</label>
       <div class="mt-2">
         <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 sm:max-w-xl dark:ring-gray-700">
-          <input required type="text" name="url" id="url" pattern="^(https?:\/\/)?(www\.)?github\.com\/orgs\/[^\/]+\/projects\/\d+$" autofocus="autofocus" autocomplete="url" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6 dark:bg-gray-800 dark:text-gray-200 dark:placeholder:text-gray-600" placeholder="https://github.com/dep...">
+          <input required type="text" name="url" id="url" pattern="^(https?:\/\/)?(www\.)?github\.com\/orgs\/[^\/]+\/projects\/\d+$" autofocus="autofocus" autocomplete="url" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6 dark:bg-gray-800 dark:text-gray-200 dark:placeholder:text-gray-600" placeholder="https://github.com/orgs/dep.../projects/123">
         </div>
       </div>
 
