--- a/views/sprint.erb
+++ b/views/sprint.erb
@@ -2,7 +2,7 @@
 <% content_for(:title) do %>
   <div class="flex justify-between items-center">
     <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight dark:text-gray-100"><%= @title %></h1>
-    <a href="<%= request.path + '/csv' %>" rel="noopener nofollow noreferrer" class="inline-flex items-center justify-center h-9 px-3 text-xs font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500 dark:bg-gray-950 dark:text-gray-100 dark:border-gray-950 dark:hover:text-gray-300 dark:hover:bg-black">
+    <a href="<%= request.path + '/csv' %>" rel="noopener nofollow noreferrer" class="print:hidden inline-flex items-center justify-center h-9 px-3 text-xs font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500 dark:bg-gray-950 dark:text-gray-100 dark:border-gray-950 dark:hover:text-gray-300 dark:hover:bg-black">
       Download CSV
     </a>
   </div>
