--- a/views/project.erb
+++ b/views/project.erb
@@ -1,19 +1,19 @@
-<% if @paginated_sprints.any? %>
-  <div>
-    <div class="sm:hidden">
-      <select id="tabs" name="tabs" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm dark:bg-gray-800 dark:text-gray-200" onchange="location = this.value;">
-        <option value="/projects/<%= @project.id %>" <%= 'selected' if params[:status].blank? %>>Active</option>
-        <option value="/projects/<%= @project.id %>?status=completed" <%= 'selected' if params[:status] == 'completed' %>>Completed</option>
-      </select>
-    </div>
-    <div class="hidden sm:block">
-      <nav class="-mb-px flex space-x-8" aria-label="Tabs">
-        <a href="/projects/<%= @project.id %>?status=" class="whitespace-nowrap <%= params[:status].blank? ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status].blank? %>>Active</a>
-        <a href="/projects/<%= @project.id %>?status=completed" class="whitespace-nowrap <%= params[:status] == 'completed' ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status] == 'completed' %>>Completed</a>
-      </nav>
-    </div>
+<div>
+  <div class="sm:hidden">
+    <select id="tabs" name="tabs" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm dark:bg-gray-800 dark:text-gray-200" onchange="location = this.value;">
+      <option value="/projects/<%= @project.id %>" <%= 'selected' if params[:status].blank? %>>Active</option>
+      <option value="/projects/<%= @project.id %>?status=completed" <%= 'selected' if params[:status] == 'completed' %>>Completed</option>
+    </select>
   </div>
+  <div class="hidden sm:block">
+    <nav class="-mb-px flex space-x-8" aria-label="Tabs">
+      <a href="/projects/<%= @project.id %>?status=" class="whitespace-nowrap <%= params[:status].blank? ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status].blank? %>>Active</a>
+      <a href="/projects/<%= @project.id %>?status=completed" class="whitespace-nowrap <%= params[:status] == 'completed' ? 'text-indigo-600 dark:text-indigo-200' : 'text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-200' %> px-1 py-4 text-sm font-medium" <%= 'aria-current="page"' if params[:status] == 'completed' %>>Completed</a>
+    </nav>
+  </div>
+</div>
 
+<% if @paginated_sprints.any? %>
   <ul role="list" class="divide-y divide-gray-100 dark:divide-gray-800">
     <% @paginated_sprints.each do |sprint| %>
       <li class="flex items-center justify-between gap-x-6 py-5">
@@ -60,5 +60,11 @@
     <% end %>
   </ul>
 <% else %>
-  No sprints found for this project.
+  <div class="mt-8 text-center">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mx-auto h-12 w-12 text-gray-400 dark:text-gray-600">
+      <path stroke-linecap="round" stroke-linejoin="round" d="m9 9 6-6m0 0 6 6m-6-6v12a6 6 0 0 1-12 0v-3" />
+    </svg>
+    <h3 class="mt-2 text-sm font-semibold text-gray-900 dark:text-gray-100">No sprints found</h3>
+    <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">Add a Sprint to one of your Issues.</p>
+  </div>
 <% end %>
